--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,4 +1,3 @@
-// config
 @import "variables";
 
 //layout
@@ -18,3 +17,9 @@
 
 //icon
 @import "../components/Icon/style";
+
+//input
+@import "../components//Input/style";
+
+//autocomplete
+@import "../components/AutoComplete/style"
