--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -22,4 +22,16 @@
 @import "../components//Input/style";
 
 //autocomplete
-@import "../components/AutoComplete/style"
+@import "../components/AutoComplete/style";
+
+// upload
+@import "../components/Upload/style";
+
+// progress
+@import "../components/Progress/style";
+
+//alert
+@import "../components/Alert/style";
+
+//tabs
+@import "../components/Tabs/style"
