add modal compoment

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -34,4 +34,7 @@
 @import "../components/Alert/style";
 
 //tabs
-@import "../components/Tabs/style"
+@import "../components/Tabs/style";
+
+//modal
+@import "../components/Modal/style";
